--- a/src/app/aufgaben/aufgabe3/aufgabe3.component.html
+++ b/src/app/aufgaben/aufgabe3/aufgabe3.component.html
@@ -8,7 +8,8 @@
 <br />
 1. Navigiere zu aufgaben/aufgabe3 <br />
 2. Öffne die .ts-file <br />
-3. Dort sind die Methoden, mit denen die Prüfung stattfinden soll. <br />
+3. Dort sind die Methoden, mit denen die Prüfung der Werte stattfinden soll.
+<br />
 
 <br />
 <mat-form-field appearance="fill">
